<resources>
    <string name="achievements_page">Præstationer</string>
    <string name="arabic_language">العربية</string>
    <string name="useful_official_links">Nyttige officielle links</string>
    <string name="source_and_date">Kilde og dato</string>
    <string name="source_prefix">Kilde: </string>
    <string name="last_checked_prefix">Sidst tjekket: </string>
    <string name="open_official_page">Åbn officiel side</string>
    <string name="show_on_map">Vis på kort</string>
    <string name="read_all_local_rules">Læs alle lokale regler</string>
    <string name="show_less">Vis mindre</string>
    <string name="nearest_recycling_centre">Nærmeste genbrugsplads</string>
    <string name="location_to_find_centre">Tryk for at finde nærmeste genbrugsplads</string>
    <string name="finding_nearest_centre">Finder nærmeste genbrugsplads…</string>
    <string name="nearest_centre_unavailable">Ingen genbrugsplads fundet</string>
    <string name="choose_municipality_prompt">Hvilken kommune bor du i?</string>
    <string name="choose_municipality">Vælg kommune</string>
    <string name="uses_fractions">Bruger %1$d ud af %2$d fraktioner</string>
    <string name="waste_fractions_overview">Affaldsfraktioner: %1$d af %2$d</string>
    <string name="fraction_used">Bruges</string>
    <string name="fraction_not_used">Bruges ikke</string>
    <string name="fraction_unconfirmed">Ikke bekræftet</string>
    <string name="fraction_unconfirmed_explanation">Ikke bekræftet betyder, at kommunens materiale ikke angiver fraktionen tydeligt.</string>
    <string name="municipal_waste_service_information">Info om kommunens affaldsordning</string>
    <string name="practical_waste_info">Praktisk affaldsinfo</string>
    <string name="waste_operator">Affaldsoperatør</string>
    <string name="official_waste_page">Officiel affaldsside</string>
    <string name="recycling_centres_count">Genbrugspladser</string>
    <string name="local_result_title">I %1$s skal %2$s sorteres som:</string>
    <string name="local_disposal_title">I %1$s kan %2$s afskaffes således:</string>
    <string name="local_sorting_description">%1$s skal sorteres som %2$s i %3$s.</string>
    <string name="local_rule_source">Se kommunens kilde</string>
    <string name="local_rule_checked">Kilden er tjekket: %1$s</string>
    <string name="app_name">Affaldsguide Danmark</string>
    <string name="indtast_skrald">Indtast affald...</string>
    <string name="find_naermeste_genbrugsplads">Find nærmeste genbrugsplads</string>
    <string name="finder_placering">Finder din placering…</string>
    <string name="afstand_fra_dig">%1$s væk</string>
    <string name="placering_ikke_tilgængelig">Din placering kunne ikke findes. Kontrollér, at placering er slået til, og prøv igen.</string>
    <string name="placeringstilladelse_påkrævet">Tillad positionsadgang for at finde den nærmeste genbrugsplads.</string>
    <string name="om_del_1" formatted="false">Affaldssortering kan være svær at gennemskue i hverdagen, især når man står med en genstand, der ikke passer tydeligt ind i en bestemt beholder.\n\nI Danmark arbejder kommunerne ud fra mere ensartede affaldsfraktioner som madaffald, papir, pap, metal, glas, plast, mad- og drikkekartoner, tekstilaffald, farligt affald og restaffald. Der kan dog stadig være lokale forskelle i ordninger, beholdere og afleveringssteder.\n\nAffaldsguide Danmark er en uafhængig sorteringsguide og er ikke tilknyttet, godkendt af eller drevet af en offentlig myndighed, kommune eller offentligt affaldsselskab. Appen er lavet for at gøre det lettere at finde et hurtigt og brugbart svar, men officielle og lokale regler bør altid kontrolleres hos kommunen eller relevante offentlige kilder.</string>
    <string name="om_del_3">I Affaldsguide Danmark kan du søge efter en affaldsgenstand og se, hvilken affaldsfraktion den typisk skal sorteres i.\n\nSøgefunktionen bruger en lokal database i appen, så de vigtigste sorteringsoplysninger er tilgængelige hurtigt. Databasen bliver løbende forbedret med flere genstande og mere præcise beskrivelser.\n\nAppen skal ses som en praktisk sorteringsguide. Hvis du er i tvivl om lokale regler, store genstande eller særlige afleveringssteder, bør du altid tjekke din kommunes egne anvisninger.</string>
    <string name="kontaktoplysninger">Affaldsguide Danmark er udviklet af Simple Web, der ejes af Oliver Kronholm Thomsen.\n\nUdover Affaldsguide Danmark står jeg også bag simplecode.dk, whenrocketsfly.com og elis-icebreakers.com.\n\nHvis du har spørgsmål, ris, ros eller forslag til appen, er du velkommen til at kontakte mig på info@simplecode.dk.</string>
    <string name="privatlivspolitik">Affaldsguide Danmark er lavet med fokus på at give enkel og hurtig hjælp til affaldssortering. Appen beder ikke om navn, adresse eller e-mailadresse for at bruge den almindelige søgefunktion.\n\nSøgefunktionen bruger en lokal affaldsdatabase, som ligger i appen. Det betyder, at selve affaldssøgningen ikke kræver, at der hentes sorteringsdata fra eksterne databaser.\n\nAppen bruger Google AdMob til annoncer. AdMob kan behandle tekniske oplysninger som enhedsoplysninger, appversion, annoncedata og generel brugsstatistik. Oplysningerne bruges til at vise og måle annoncer samt til at vedligeholde og forbedre appens drift.\n\nAffaldsguide Danmark sælger ikke dine personlige oplysninger. Oplysninger behandles kun i det omfang, det er nødvendigt for appens drift, annoncering eller hvis det kræves ved lov.\n\nHvis du har spørgsmål til privatlivspolitikken eller ønsker at kontakte os om behandling af oplysninger, kan du skrive til info@simplecode.dk.\n\nVi forbeholder os retten til at opdatere denne privatlivspolitik. Eventuelle ændringer vil blive gjort tilgængelige i appen.</string>
    <string name="vilkårogbetingelser">Affaldsguide Danmark er en uafhængig og vejledende sorteringsguide. Appen er ikke tilknyttet, godkendt af, sponsoreret af eller drevet af en offentlig myndighed, kommune eller et offentligt affaldsselskab.\n\nOplysningerne i appen er udelukkende beregnet som praktisk information og generel vejledning. Vi forsøger at holde oplysningerne så korrekte og brugbare som muligt, men kan ikke garantere, at alle oplysninger altid er fuldstændige, opdaterede eller gældende i alle kommuner.\n\nAffaldsordninger, beholdere, genbrugspladser, kontaktoplysninger og lokale regler kan variere og ændre sig. Ved tvivl, farligt affald, store genstande eller særlige afleveringskrav bør du altid kontrollere reglerne hos din kommune, genbrugsplads eller relevante officielle kilder.\n\nOfficielle kilder og kontrol af information:\nborger.dk: https://www.borger.dk/miljoe-og-energi/Affald-og-genbrug\nMiljøstyrelsen: https://mst.dk\nKommunespecifik information bør kontrolleres på den enkelte kommunes officielle hjemmeside, som der kan linkes til i appen.\n\nBrug af appen sker på eget ansvar. Simple Web påtager sig ikke ansvar for fejl, mangler eller beslutninger truffet på baggrund af appens indhold.</string>
    <string name="introtekst">Søg efter affald og se, hvilken affaldsfraktion det skal sorteres i.</string>
    <string name="baggrund_for_appen_overskrift">Baggrund for appen</string>
    <string name="hvordan_appen_virker_overskrift">Hvordan appen virker</string>
    <string name="kontaktoplysninger_overskrift">Kontaktoplysninger</string>
    <string name="privatlivspolitik_overskrift">Privatlivspolitik</string>
    <string name="vilkår_og_betingelser_overskrift">Vilkår og betingelser</string>
    <string name="tomt_søgefelt">Skriv venligst noget i søgefeltet</string>
    <string name="affald_ikke_fundet_med_forslag">Vi fandt ikke "%1$s".\n\nMente du "%2$s"?</string>
    <string name="affald_ikke_fundet_uden_forslag">Vi fandt ikke "%1$s". Prøv et mere almindeligt ord eller en anden stavemåde.</string>
    <string name="mente_du_en_af_disse">Mente du en af disse?</string>
    <string name="proev_en_af_disse_soegninger">Prøv en af disse søgninger:</string>
    <string name="search_intro_title">Find den rigtige sortering</string>
    <string name="search_intro_text">Søg efter affald og se, hvordan det skal sorteres.</string>
    <string name="search_intro_examples_label">Prøv en hurtig søgning</string>
    <string name="search_intro_recent_label">Seneste søgninger</string>
    <string name="saved_municipality_chip">Min kommune: %1$s</string>
    <string name="saved_municipality_label">Min kommune</string>
    <string name="search">Søg</string>
    <string name="example_pizzabakke">Pizzabakke</string>
    <string name="example_batteri">Batteri</string>
    <string name="example_kaffefilter">Kaffefilter</string>
    <string name="example_glas">Glas</string>
    <string name="seneste_soegninger">Seneste søgninger</string>
    <string name="seneste_soegninger_tom">Dine seneste søgninger vises her, når du har brugt søgefeltet.</string>
    <string name="se_alle">Se alle</string>
    <string name="kommuner">Kommuner</string>
    <string name="kommuner_intro">Find vejledende information, kontaktoplysninger og links til officielle kommunale kilder.</string>
    <string name="indtast_kommune">Postnummer, by eller kommune</string>
    <string name="kommuner_kunne_ikke_indlaeses">Kommunedata kunne ikke indlæses.</string>
    <string name="kommunens_adresse">Kommunens adresse</string>
    <string name="gem_kommune">Angiv som din kommune</string>
    <string name="fjern_gemt_kommune">Fravælg som din kommune</string>
    <string name="replace_municipality_button">Skift til denne kommune</string>
    <string name="replace_municipality_title">Skift din kommune?</string>
    <string name="replace_municipality_message">%1$s bliver erstattet af %2$s som din kommune. Du kan kun have én kommune valgt ad gangen.</string>
    <string name="replace_municipality_confirm">Skift kommune</string>
    <string name="replace_municipality_cancel">Annuller</string>
    <string name="min_kommune">Min kommune</string>
    <string name="email_label">E-mail</string>
    <string name="hjemmeside_label">Hjemmeside</string>
    <string name="om_kommunen">Om kommunen</string>
    <string name="kommunens_affaldsregler">Kommunens affaldsregler</string>
    <string name="velkommen_til_mit_affald">Velkommen til\nAffaldsguide Danmark</string>
    <string name="copyright">Ejet af Simple Web | CVR: 41279664 | Copyright 2026</string>
    <string name="menu1_om_appen">Om appen</string>
    <string name="menu_2_kontaktinformation">Kontaktinformation</string>
    <string name="menu_4_privatlivspolitik">Privatlivspolitik</string>
    <string name="menu_5_vilkår_og_betingelser">Vilkår og betingelser</string>
    <string name="sprog">Sprog</string>
    <string name="sprog_intro">Vælg appens sprog</string>
    <string name="greeting_municipality_hint">Postnummer, by eller kommune</string>
    <string name="onboarding_language_title">Angiv dit foretrukne sprog</string>
    <string name="onboarding_language_subtitle">Vælg det sprog, du vil bruge i appen.</string>
    <string name="onboarding_municipality_title">Angiv din kommune</string>
    <string name="onboarding_municipality_subtitle">Valgfrit, men du kan hurtigere finde lokale regler og genbrugspladser.</string>
    <string name="onboarding_location_title">Genbrugspladser i nærheden</string>
    <string name="onboarding_location_subtitle">Appen kan bruge din placering til at finde den nærmeste genbrugsplads og vise afstanden. Du kan også springe dette trin over og bruge appen uden placering.</string>
    <string name="onboarding_continue">Fortsæt</string>
    <string name="onboarding_back">Tilbage</string>
    <string name="onboarding_skip">Spring over</string>
    <string name="dansk">Dansk</string>
    <string name="engelsk">English</string>
    <string name="bottom_soeg">Søg</string>
    <string name="bottom_fraktioner">Fraktioner</string>
    <string name="bottom_kommuner">Kommuner</string>
    <string name="bottom_mere">Mere</string>
    <string name="begynd_med_det_samme">Begynd</string>
</resources>