<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/seneste_soegninger"
        android:title="@string/seneste_soegninger" />

    <item
        android:id="@+id/sprog"
        android:title="@string/sprog" />

    <item
        android:id="@+id/achievements"
        android:title="@string/achievements_page" />

    <item
        android:id="@+id/om"
        android:title="@string/menu1_om_appen" />

    <item
        android:id="@+id/kontaktinformation"
        android:title="@string/menu_2_kontaktinformation" />

    <item
        android:id="@+id/privatlivspolitik"
        android:title="@string/menu_4_privatlivspolitik" />

    <item
        android:id="@+id/vilkårogbetingelser"
        android:title="@string/menu_5_vilkår_og_betingelser" />

</menu>
