<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="34dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/my_template"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:gnt_template_type="@layout/gnt_small_template_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baggrund_for_appen_overskrift"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/green_light"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="0dp"
                android:paddingTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/om_del_1"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/text_color"
                android:padding="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hvordan_appen_virker_overskrift"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/green_light"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="0dp"
                android:paddingTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/om_del_3"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/text_color"
                android:layout_marginBottom="16dp"
                android:padding="16dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
